# python_robocon

./: .gitignore
docs/: MILESTONE2_SAFE_COMMANDS.md  MILESTONE3_SAFETY_COMMANDS.md  MILESTONE4_MANUAL_VELOCITY.md  MILESTONE5_PRIMITIVE_EXECUTOR.md  MILESTONE6_1_MISSION_RETRY_FIX.md  MILESTONE6_MISSION_YAML_EXECUTOR.md  NUC_S3_PROTOCOL_V1.md
firmware_reference/: krai_s3_master_milestone4_manual_velocity.ino  krai_s3_master_milestone5_primitive_fake.ino  s3_nuc_protocol_readonly_reference.ino
python-GUI-main-ros1/: .gitignore
python-GUI-main-ros1/src/robocon_gui/: CMakeLists.txt  package.xml  setup.py
python-GUI-main-ros1/src/robocon_gui/robocon_gui/: config.py  main.py
python-GUI-main-ros1/src/robocon_gui/robocon_gui/core/: gui_state.py
python-GUI-main-ros1/src/robocon_gui/robocon_gui/core/kirim/src/gui_publis/: setup.py
python-GUI-main-ros1/src/robocon_gui/robocon_gui/core/kirim/src/gui_publis/gui_publis/: send_data.py
python-GUI-main-ros1/src/robocon_gui/robocon_gui/core/kirim/src/gui_publis/gui_publis/data/json/: gui_state.json
python-GUI-main-ros1/src/robocon_gui/robocon_gui/ros/: gui_command_publisher.py
python-GUI-main-ros1/src/robocon_gui/robocon_gui/services/: camera_service.py
python-GUI-main-ros1/src/robocon_gui/robocon_gui/ui/: main_window.py
python-GUI-main-ros1/src/robocon_robot/: CMakeLists.txt  package.xml
python-GUI-main-ros1/src/robocon_robot/robocon_robot/: robot_command_subscriber.py
python-GUI-main-ros1/src/robocon_robot/scripts/: robot_command_subscriber
python-GUI-main-ros2/: README_ROS1_FLOW.md  run_ros2_native.py  run_windows_mock.py
python-GUI-main-ros2/legacy/ros2_kating/gui_publis/: package.xml  setup.cfg
python-GUI-main-ros2/legacy/ros2_kating/gui_publis/gui_publis/data/json/: gui_state.json
python-GUI-main-ros2/src/robocon_gui/: package.xml  setup.cfg  setup.py
python-GUI-main-ros2/src/robocon_gui/robocon_gui/: config.py
python-GUI-main-ros2/src/robocon_gui/robocon_gui/core/: gui_state.py
python-GUI-main-ros2/src/robocon_gui/robocon_gui/core/kirim/src/gui_publis/gui_publis/data/json/: gui_state.json
python-GUI-main-ros2/src/robocon_gui/robocon_gui/ros/: gui_command_publisher.py  gui_command_publisher.py.bak
python-GUI-main-ros2/src/robocon_gui/robocon_gui/ui/: main_window.py  styles.py
python-GUI-main-ros2/src/robocon_gui/scripts/: robocon_gui
python-GUI-main-ros2/src/robocon_robot/: package.xml  setup.cfg  setup.py
python-GUI-main-ros2/src/robocon_robot/robocon_robot/: robot_command_subscriber.py
src/krai_bringup/: package.xml  setup.cfg  setup.py
src/krai_bringup/launch/: base_bringup.launch.py  full_system.launch.py  gui_bringup.launch.py  mission_bringup.launch.py
src/krai_config/: CMakeLists.txt  package.xml
src/krai_config/mechanisms/: slave_b.yaml
src/krai_config/missions/: debug_forward_turn.yaml  index.yaml
src/krai_config/missions/debug/: debug_square.yaml
src/krai_config/missions/match/: auto_left.yaml  auto_right.yaml  cp1_box_01.yaml  cp1_box_02.yaml  cp1_box_03.yaml  cp1_box_04.yaml  cp1_box_05.yaml  cp1_box_06.yaml  cp1_box_07.yaml  cp1_box_08.yaml  cp1_box_09.yaml  cp1_box_10.yaml  cp1_box_11.yaml  cp1_box_12.yaml  cp1_weapon_01.yaml  cp1_weapon_02.yaml  cp1_weapon_03.yaml  cp1_weapon_04.yaml  cp2_box_01.yaml  cp2_box_02.yaml  cp2_box_03.yaml  cp2_box_04.yaml  cp2_box_05.yaml  cp2_box_06.yaml  cp2_box_07.yaml  cp2_box_08.yaml  cp2_box_09.yaml  cp2_box_10.yaml  cp2_box_11.yaml  cp2_box_12.yaml  cp2_weapon_01.yaml  cp2_weapon_02.yaml  cp2_weapon_03.yaml  cp2_weapon_04.yaml
src/krai_config/missions/mechanism/: mechanism_placeholder.yaml  slave_b_reserved_demo.yaml
src/krai_config/missions/real_test/: real_move_20cm.yaml  real_short_test.yaml  real_turn_30deg.yaml
src/krai_config/profiles/: speed_profiles.yaml
src/krai_config/robot/: frames.yaml  limits.yaml  serial.yaml
src/krai_gui/: package.xml  setup.cfg  setup.py
src/krai_gui/krai_gui/: gui_placeholder_node.py  krai_operator_gui.py
src/krai_interfaces/: CMakeLists.txt  package.xml
src/krai_interfaces/action/: ExecutePrimitive.action  RunMission.action
src/krai_interfaces/msg/: BaseTelemetry.msg  MissionState.msg  PrimitiveStatus.msg  S3Health.msg
src/krai_interfaces/srv/: ListMissions.srv  ResetHeading.srv  ResetOdom.srv
src/krai_mission/: package.xml  setup.cfg  setup.py
src/krai_mission/krai_mission/: mission_manager_node.py
src/krai_s3_bridge/: package.xml  setup.cfg  setup.py
src/krai_s3_bridge/krai_s3_bridge/: s3_bridge_node.py
