<?xml version="1.0"?>
<package format="3">
  <name>krai_config</name>
  <version>0.0.1</version>
  <description>Configuration files for KRAI robot.</description>
  <maintainer email="moh.fahri12018@gmail.com">rifat nur</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
