<?xml version="1.0"?>
<package format="3">
  <name>robocon_gui</name>
  <version>0.0.1</version>
  <description>PyQt5 ROS2 GUI for Robocon command control and telemetry monitoring.</description>
  <maintainer email="hybridthry55@gmail.com">Hybrid Nuuh</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-pyqt5</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
