<?xml version="1.0"?>
<package format="3">
  <name>robocon_robot</name>
  <version>0.0.1</version>
  <description>ROS2 robot command subscriber for Robocon GUI.</description>
  <maintainer email="hybridthry55@gmail.com">Hybrid Nuuh</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
